--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<img src="queue.png" alt="" width="100">
 			<img src="queue.png" alt="" width="100">
 			<span class="passenger_queue_count count" >0</span>
-			<button class="join_queue">Join</button>
-			<button class="leave_queue">Leave</button>
+			<button class="join_queue joinBtn">Join</button>
+			<button class="leave_queue leaveBtn">Leave</button>
 	
 		</div>
 	
@@ -30,7 +30,7 @@
 			<img src="minivan.png" alt="" width="100">
 			<img src="minivan.png" alt="" width="100">
 			<span class="taxi_queue_count count" >0</span>
-			<button class="join_taxi_queue">Join queue</button>
+			<button class="join_taxi_queue taxiJoinBtn">Join queue</button>
 		</div>
 	
 		<div class="section" >
@@ -40,7 +40,7 @@
 			<img src="arrow.png" alt="" width="100">
 			<img src="minivan.png" alt="" width="100">
 			<!-- <span class="taxi_queue_count count" >0</span> -->
-			<button class="depart">Depart</button>
+			<button class="depart departBtn">Depart</button>
 		</div>
 	
 
